# embedded-repo

./: README  README.EN  README.RU
demo/repo/: CMakeLists.txt  data_model.cfg  repository.cfg  run.cmd  run.sh  run_cmake.cmd  run_cmake.sh  update_dlls.cmd  update_sos.sh
demo/repo/src/: DataproviderImpl.cpp  DataproviderImpl.h  allocateRepository.cpp  allocateRepository.h  getRndSizes.cpp  getRndValues.cpp  grammar_stuff.h  main.cpp  parseCLIargs.cpp  parseCLIargs.h
demo/repo/src/test_patterns/: Urandom_generators.h  Urandom_request_gen.cpp  pattern_headers.h
libs32/: DataSet.dll.md5  DataSet.so.md5  DataSetd.dll.md5  DataSetd.so.md5  Key.dll.md5  Key.so.md5  Keyd.dll.md5  Keyd.so.md5  Logger.dll.md5  Logger.so.md5  Loggerd.dll.md5  Loggerd.so.md5  RPSReader.dll.md5  RPSReader.so.md5  RPSReaderd.dll.md5  RPSReaderd.so.md5  RepoCache.dll.md5  RepoCache.so.md5  RepoCacheLogic.dll.md5  RepoCacheLogic.so.md5  RepoCacheLogicd.dll.md5  RepoCacheLogicd.so.md5  RepoCached.dll.md5  RepoCached.so.md5  RepoDirectory.dll.md5  RepoDirectory.so.md5  RepoDirectoryd.dll.md5  RepoDirectoryd.so.md5  RepoPersistentStorage.dll.md5  RepoPersistentStorage.so.md5  RepoPersistentStoraged.dll.md5  RepoPersistentStoraged.so.md5  RepoTransactions.dll.md5  RepoTransactions.so.md5  RepoTransactionsd.dll.md5  RepoTransactionsd.so.md5  config_parser.dll.md5  config_parser.so.md5  config_parserd.dll.md5  config_parserd.so.md5  (+8 more)
libs32/DataProvider/include/: DataProviderDelegate.hpp  DataProvider_Export.h  IDataProvider_public.h
libs32/DataSet/include/: DataSet.h  DataSetHelper.h  DataSetHelper_Export.h  DataSet_Export.h  Metadata.h  data_sizes.h
libs32/Key/include/: IKey.h  Key_Export.h
libs32/Logger/include/: Logger.h  Logger_Export.h  errors.h
libs32/RPSReader/include/: IStorageReader.h  RPSReader_Export.h
libs32/RepoCache/include/: IRepoCache.h  RepoCache_Export.h
libs32/RepoCacheLogic/include/: IRepoCacheLogic.h  RepoCacheLogic_Export.h
libs32/RepoDirectory/include/: IRepoDirectory.h  RepoDirectory_Export.h
libs32/RepoPersistentStorage/include/: IRepoPersistentStorage.h  IStorageImpl.h  RepoPersistentStorage_Export.h
libs32/RepoTransactions/include/: AtomicTransaction_Export.h  IAtomicTransaction.h  IPlanTransactions.h  PlanTransactions_Export.h
libs32/common/include/: common_definitions.h
libs32/config_parser/include/: config_parser.h  config_parser_Export.h
libs32/repo/include/: DataModel_caching_grammar.h  IRepoManager.h  Repo_Export.h
libs32/repo_grammar/include/: Grammar.h  logger_closure.h  public_interface.h  public_interface_Array_str.h
libs32/repository/include/: IRepository.h  Repository_Export.h
